--- a/trunk/java/build.xml
+++ b/trunk/java/build.xml
@@ -24,7 +24,7 @@
 		<javadoc sourcepath="${src}"
 			encoding="utf-8"
 			docencoding="utf-8"
-			packagenames="net.me2day.java.*"
+			packagenames="net.me2day.*"
 			destdir="${apidocs}"
 			link="http://java.sun.com/j2se/1.5.0/docs/api"
 			splitindex="yes">
@@ -33,7 +33,7 @@
 
 	<target name="build" depends="compile">
         <copy todir="${build}">
-            <fileset dir="${src}" includes="net/me2day/java/gwt/client/**/*.java,**/*.xml" />
+            <fileset dir="${src}" includes="net/me2day/gwt/client/**/*.java,**/*.xml" />
         </copy>
 		<jar jarfile="${MainJar}"
 			basedir="${build}"
