--- a/java/build.xml
+++ b/java/build.xml
@@ -26,6 +26,9 @@
 			destdir="${apidocs}"
 			link="http://java.sun.com/j2se/1.5.0/docs/api"
 			splitindex="yes">
+            <classpath>
+                <path location="lib/lombok.jar" />
+            </classpath>
 		</javadoc>
 	</target>
 
